--- a/url_shortener/templates/home.html
+++ b/url_shortener/templates/home.html
@@ -31,9 +31,9 @@
                <div class="row">
                   <div class="col-md-offset-5 col-md-3">
                      <h4>Enter URL to shorten.</h4>
-                     <form method="post" action="">
+                     <form method="post" action="" class="navbar-form navbar-right">
                         <div class="form-group">
-                           <input type="text" id="url" name="url" class="form-control input-lg chat-input" placeholder="URL" />
+                           <input type="text" id="url" name="url" class="form-control input-lg chat-input" placeholder="Enter the URL you want to shorten" size="35"/>
                            <button type="submit" class="btn btn-lg btn-info">Submit</button>
                         </div>
                      </form>
@@ -41,14 +41,10 @@
                </div>
                {% else %}
                <div>
-                  Enjoy, your shortened URL is: <a href="{{short_url}}"> {{short_url}}</a>
+                  Your shortened URL is: <a href="{{short_url}}"> {{short_url}}</a>
                </div>
                {% endif %}
             </div>
-         </div>
-         <footer>
-            <p>&copy; Janit</p>
-         </footer>
          </div>
       </body>
    </html>
